syntax = "proto3";
package schedule;
option go_package = "github.com/weplanx/schedule/api";
import "google/protobuf/empty.proto";

service API {
  rpc Put(Schedule) returns (google.protobuf.Empty) {}
  rpc Get(GetRequest) returns (GetReply) {}
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {}
}

message Schedule {
  string key = 1;
  repeated Job jobs = 2;
}

message Job {
  string spec = 1;
  string mode = 2;
  bytes option = 3;

  optional int64 next_date = 4;
  optional int64 last_date = 5;
}

message GetRequest {
  repeated string keys = 1;
}

message GetReply {
  map<string, Schedule> data = 1;
}

message DeleteRequest {
  string key = 1;
}


